--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -19,9 +19,13 @@ environment:
   sdk: ">=2.15.0 <3.0.0"
 
 dependencies:
+  camera: ^0.9.4+5
   cupertino_icons: ^1.0.4
   flutter:
     sdk: flutter
+  hive: ^2.0.5
+  hive_flutter: ^1.1.0
+  uuid:
 
 dev_dependencies:
   flutter_lints: ^1.0.4
